fix: update code DelegationMultisigTest.